fix alignment on photo post list

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -65,6 +65,9 @@ a:hover {
 .ml-44px {
   margin-left: 44px;
 }
+.ml-76px {
+  margin-left: 76px;
+}
 .ml-82px {
   margin-left: 82px;
 }
@@ -345,6 +348,9 @@ a:hover {
 }
 
 
+.mb-5px {
+  margin-bottom: 5px;
+}
 .mb-6 {
   margin-bottom: 6px;
 }
